fixed contact button font too thin on mobile

--- a/src/styles/components/ContactBtn.module.scss
+++ b/src/styles/components/ContactBtn.module.scss
@@ -34,7 +34,7 @@
           display: block;
           justify-content: center;
         font-size: $font-size-s;
-        font-weight: $font-thin;
+        font-weight: $font-base;
         width: 100px;
         padding: 0.25rem 0.5rem;
 
